--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	    
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<style type="text/css">
+		@media only screen and (max-width: 600px){
+			.navbar{
+				height: 220px;
+				flex-direction: column;
+				text-align: center;
+				margin-top: 10px;
+			}
+		}
+	</style>	
 </head>
 <body class="body">
 	
